--- a/src/profile.html
+++ b/src/profile.html
@@ -6,7 +6,7 @@
       <component name="nav" props=";;-active;;;text-blue-500" />
       <component name="pagetitle" props="Edit Profile" />
       <form class="max-w-md mx-auto p-4 sm:px-6 lg:px-8">
-        <component name="input-text" props="text;username;Username;;" />
+        <component name="input-text" props="text;name;Name;;" />
         <component name="input-text" props="email;email;Email;;" />
         <component name="input-text" props="password;password;Password;;" />
         <div class="flex gap-x-3">
@@ -18,20 +18,19 @@
       <script>
         ready(async function () {
           try {
-            const profile = await getProfile();
+            const profile = await API.getProfile();
 
-            val('#username', profile.username);
+            val('#name', profile.name);
             val('#email', profile.email);
 
-            // TODOOOO: drop username? rather use name. or define requirements
             const watchers = [
               {
-                identifier: '#username',
+                identifier: '#name',
                 type: 'text',
                 required: true,
-                message: 'TODO',
+                message: 'Name must be between 3 and 50 characters',
                 validator: (value) =>
-                  validateRegex(regexPreset('text', 3, 30), value),
+                  Regex.validate(Regex.preset('text', 3, 50), value),
               },
               {
                 identifier: '#email',
@@ -39,7 +38,7 @@
                 required: true,
                 message: 'Must be a valid emailaddress.',
                 validator: (value) =>
-                  validateRegex(regexPreset('email', 0, 128), value),
+                  Regex.validate(Regex.preset('email', 0, 128), value),
               },
               {
                 identifier: '#password',
@@ -48,28 +47,28 @@
                 message:
                   'Minimum 8 characters, at least 1 uppercase letter, 1 lowercase letter, 1 number and 1 special character.',
                 validator: (value) =>
-                  validateRegex(regexPreset('password', 8, '', ''), value),
+                  Regex.validate(Regex.preset('password', 8, '', ''), value),
               },
             ];
 
-            watchValues(watchers, '#submit');
+            Form.watch(watchers, '#submit');
 
             query('form').addEventListener('submit', async (e) => {
-              if (formIsValid()) {
+              if (Form.isValid()) {
                 e.preventDefault();
 
                 const payload = {
-                  username: val('#username'),
+                  name: val('#name'),
                   email: val('#email'),
                   password: val('#password'),
                 };
 
                 try {
-                  const result = await putProfile(payload);
+                  const result = await API.putProfile(payload);
                   redirect(`/profile/edit`);
                 } catch (error) {
                   console.error(error);
-                  notify(
+                  Notification.notify(
                     'Profile not updated',
                     'Could not update profile information.'
                   );
@@ -77,7 +76,10 @@
               }
             });
           } catch (error) {
-            notify('Something went wrong', 'Could not load profile.');
+            Notification.notify(
+              'Something went wrong',
+              'Could not load profile.'
+            );
           }
         });
       </script>
