--- a/src/itemCreate.html
+++ b/src/itemCreate.html
@@ -17,6 +17,7 @@
           props="date;dateToAccomplish;Date to accomplish;;Optional"
         />
         <component name="input-file" props="image;Image;Optional" />
+        <component name="input-text" props="text;location;Location;;Optional" />
         <component name="input-text" props="text;labels;Labels;;Optional" />
         <div class="flex gap-x-3">
           <component name="button" props="Cancel;" />
@@ -88,6 +89,15 @@
               },
             },
             {
+              identifier: '#location',
+              type: 'text',
+              required: false,
+              message:
+                'Description has a maximum length of 128 characters long.',
+              validator: (value) =>
+                Regex.validate(Regex.preset('text', 0, 128), value),
+            },
+            {
               identifier: '#labels',
               type: 'text',
               required: false,
@@ -103,6 +113,55 @@
             if (Form.isValid()) {
               e.preventDefault();
 
+              // dateToAccomplish
+              let dateToAccomplish = null;
+              if (val('#dateToAccomplish') !== '') {
+                dateToAccomplish = val('#dateToAccomplish');
+              }
+
+              // image
+              let image = null;
+              if (query('#image').files.length > 0) {
+                const payload = {
+                  image: query('#image').files[0],
+                };
+
+                const result = await API.postBucketImage(payload);
+                image = result.id;
+              }
+
+              // location
+              let location = null;
+              if (val('#location') !== '') {
+                try {
+                  const locations = await API.getLocations();
+
+                  for (const l of locations) {
+                    if (
+                      Format.decodeURIComponent(l.address) === val('#location')
+                    ) {
+                      location = {
+                        id: l.id,
+                      };
+                      break;
+                    }
+                  }
+
+                  if (location === null) {
+                    const result = await API.postLocation(val('#location'));
+                    location = {
+                      id: result.id,
+                    };
+                  }
+                } catch (e) {
+                  Notification.notify(
+                    'Location not created.',
+                    'Could not create location. Try again later.'
+                  );
+                }
+              }
+
+              // labels
               let labelIDs = null;
               const labelsString = val('#labels').trim();
 
@@ -138,22 +197,6 @@
                 }
               }
 
-              let dateToAccomplish = null;
-              if (val('#dateToAccomplish') !== '') {
-                dateToAccomplish = val('#dateToAccomplish');
-              }
-
-              let image = null;
-
-              if (query('#image').files.length > 0) {
-                const payload = {
-                  image: query('#image').files[0],
-                };
-
-                const result = await API.postBucketImage(payload);
-                image = result.id;
-              }
-
               const payload = getBucketItemPayload(
                 null,
                 val('#title'),
@@ -163,6 +206,7 @@
                 null,
                 null,
                 image,
+                location,
                 labelIDs
               );
 
