--- a/src/bucketList.html
+++ b/src/bucketList.html
@@ -9,7 +9,9 @@
         id="buckets"
         class="max-w-2xl mx-auto divide-y divide-slate-100"
       ></div>
-      <component name="button" props="Create;bucket/create" />
+      <div class="max-w-2xl mx-auto flex justify-center pt-4">
+        <component name="button" props="Create;bucket/create" />
+      </div>
       <template id="bucket">
         <div
           class="grid grid-cols-3 sm:grid-cols-5 p-2 px-3 sm:p-3 items-center"
