--- a/src/timeline.html
+++ b/src/timeline.html
@@ -61,7 +61,7 @@
       </template>
       <template id="no-items">
         <div
-          class="mb-4 sm:mb-6 border rounded-md sm:rounded-xl overflow-hidden p-4 sm:p-6 text-center"
+          class="mx-4 mb-4 sm:mb-6 border rounded-md sm:rounded-xl overflow-hidden p-4 sm:p-6 text-center"
         >
           No bucket items completed yet.
         </div>
